# unidir-billards

./: LICENSE  README.md
docs/: bill.aux  bill.tex
linux/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  MersenneTwister.h  NEWS  bill  bill.h  calc  calc.cpp  calc.h  config.h  config.status  configure  configure.ac  test.cfg
linux/.deps/: bill.Po  calc.Po
win/: README
win/prog/: bill.glade
win/source/: MersenneTwister.h  bill.cpp  bill.h  calc.cpp  calc.h  compile.bat
